Crypto: Support mbed TLS 3.1.0
Move dependency list to use mbed TLS 3.1.0. Contextually, add patches to
support:

* Make mbed TLS CMakeLists.txt discover if it is being built as subproject
* Hardcode CC3XX driver entry points directly into PSA Crypto core layer

Fix the driver entry point for single part cipher operation to take into
account different behaviour around IV setup.

Signed-off-by: Antonio de Angelis <antonio.deangelis@arm.com>
Change-Id: Iefe9a6ef4b3c910ab43ef913778b90026185c4c9

--- a/lib/ext/mbedcrypto/CMakeLists.txt
+++ b/lib/ext/mbedcrypto/CMakeLists.txt
@@ -15,8 +15,7 @@ endif()
 
 if ("${MBEDCRYPTO_PATH}" STREQUAL "DOWNLOAD")
     find_package(Git)
-    # Workaround: DON'T PATCH REPO
-    # file(GLOB PATCH_FILES *.patch)
+    file(GLOB PATCH_FILES *.patch)
 
     if (PATCH_FILES)
         FetchContent_Declare(mbedcrypto
