partitions: platform: Add option for disabling nv_counter
In some configurations there is no need for the non-volatile
counters. Allow users to opt-out of this feature to reduce the
memory footprint of TF-M.

This will also enable some minimal builds of TF-M to not reserve any
extra memory regions used for storing data persistently.

Change-Id: Ie82f8e8c31d6bf5b13f430cc51da7307e32f66a1
Signed-off-by: Joakim Andersson <joakim.andersson@nordicsemi.no>

--- a/secure_fw/partitions/platform/CMakeLists.txt
+++ b/secure_fw/partitions/platform/CMakeLists.txt
@@ -16,6 +16,11 @@ add_library(tfm_psa_rot_partition_platform STATIC
     platform_sp.c
 )
 
+target_compile_definitions(tfm_psa_rot_partition_platform
+    PUBLIC
+        $<$<BOOL:${PLATFORM_NV_COUNTER_MODULE_DISABLED}>:TFM_PLATFORM_NV_COUNTER_MODULE_DISABLED>
+)
+
 # The generated sources
 target_sources(tfm_psa_rot_partition_platform
     PRIVATE
@@ -66,6 +71,7 @@ target_compile_definitions(tfm_partition_defs
 include(utils)
 dump_options("Platform Partition config"
 "
-    PLATFORM_SP_STACK_SIZE
+    PLATFORM_SP_STACK_SIZE;
+    PLATFORM_NV_COUNTER_MODULE_DISABLED;
 "
 )
