--- a/tools/templates/manifestfilename.template
+++ b/tools/templates/manifestfilename.template
@@ -1,11 +1,11 @@
 /*
- * Copyright (c) 2019-2021, Arm Limited. All rights reserved.
+ * Copyright (c) 2019-2022, Arm Limited. All rights reserved.
  *
  * SPDX-License-Identifier: BSD-3-Clause
  *
  */
 
-{{utilities.donotedit_warning}}
+/***********{{utilities.donotedit_warning}}***********/
 
 #ifndef __PSA_MANIFEST_{{manifest_out_basename.upper()}}_H__
 #define __PSA_MANIFEST_{{manifest_out_basename.upper()}}_H__
