SPM: Add support for using watermarks to determine stack usage
New config option CONFIG_TFM_STACK_WATERMARKS (defaulted to OFF).
If set, when SPM initialises a partition, it sets every dword of its
stack to a fixed value. As the stack is used, these values will get
overwritten.
Add a new SPM function dump_used_stacks() that examines every
partition's stack looking for the watermark, deduces how much stack
has been used, and prints the stack usages (note that this will be an
underestimate if the partition happens to write the watermark value
to the stack). Ideally this should be called after TF-M has been
thoroughly exercised.

Currently disabled for isolation level 3, which needs more
investigation.

Change-Id: I1592a383790da9d49fddac00407d7bceaf312d47
Signed-off-by: Chris Brand <chris.brand@cypress.com>

--- a/secure_fw/spm/CMakeLists.txt
+++ b/secure_fw/spm/CMakeLists.txt
@@ -1,6 +1,6 @@
 #-------------------------------------------------------------------------------
 # Copyright (c) 2020-2022, Arm Limited. All rights reserved.
-# Copyright (c) 2021, Cypress Semiconductor Corporation. All rights reserved.
+# Copyright (c) 2021-2022, Cypress Semiconductor Corporation. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -54,6 +54,7 @@ target_sources(tfm_spm
         $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_IPC}>:ffm/backend_ipc.c>
         $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_SFN}>:ffm/backend_sfn.c>
         $<$<BOOL:${TFM_PSA_API}>:ffm/interrupt.c>
+        $<$<BOOL:${CONFIG_TFM_STACK_WATERMARKS}>:ffm/stack_watermark.c>
         $<$<BOOL:${TFM_PSA_API}>:cmsis_psa/tfm_core_svcalls_ipc.c>
         $<$<BOOL:${TFM_PSA_API}>:cmsis_psa/tfm_pools.c>
         $<$<BOOL:${TFM_PSA_API}>:cmsis_psa/thread.c>
@@ -107,6 +108,7 @@ target_compile_definitions(tfm_spm
         $<$<STREQUAL:${CONFIG_TFM_FP},hard>:CONFIG_TFM_FP=2>
         $<$<STREQUAL:${CONFIG_TFM_FP},soft>:CONFIG_TFM_FP=0>
         $<$<BOOL:${CONFIG_TFM_DOORBELL_API}>:CONFIG_TFM_DOORBELL_API=1>
+        $<$<BOOL:${CONFIG_TFM_STACK_WATERMARKS}>:CONFIG_TFM_STACK_WATERMARKS>
 )
 
 target_compile_options(tfm_spm
