Boot: Save the boot measurements of BL2
These measurements are not encoded; they are shared with the measured
boot secure partition in a raw format. When these measurements are used,
sharing the CBOR encoded measurements from the TLV area is unnecessary.

Change-Id: I61d0598123d2be964439d320b8bc7c53b00ec58e
Signed-off-by: David Vincze <david.vincze@arm.com>

--- a/bl2/CMakeLists.txt
+++ b/bl2/CMakeLists.txt
@@ -35,6 +35,7 @@ target_link_libraries(bl2
     PRIVATE
         tfm_boot_status
         $<$<BOOL:${TEST_BL2}>:mcuboot_tests>
+        platform_bl2
 )
 
 target_compile_options(bl2
@@ -54,6 +55,8 @@ target_compile_definitions(bl2
         $<$<BOOL:${DEFAULT_MCUBOOT_FLASH_MAP}>:DEFAULT_MCUBOOT_FLASH_MAP>
         $<$<BOOL:${PLATFORM_PSA_ADAC_SECURE_DEBUG}>:PLATFORM_PSA_ADAC_SECURE_DEBUG>
         $<$<BOOL:${TEST_BL2}>:TEST_BL2>
+        $<$<BOOL:${TFM_PARTITION_FIRMWARE_UPDATE}>:TFM_PARTITION_FIRMWARE_UPDATE>
+        $<$<BOOL:${CONFIG_TFM_BOOT_STORE_MEASUREMENTS}>:CONFIG_TFM_BOOT_STORE_MEASUREMENTS>
 )
 
 add_convert_to_bin_target(bl2)
