Attest: Use Measured Boot partition for token creation
Collect the measurements (SW components) from the Measured Boot
partition when enabled, otherwise use the previous method and read
the measurements from the shared data area.

Further, add measured boot partition as dependency.
Also, mark the dependency on the Measured Boot partition as
weak. This way the Initial Attestation partition can be
built without enabling the Measured Boot partition.

Change-Id: I770ddecd69e84419b78090916ebc41fe536820f9
Signed-off-by: David Vincze <david.vincze@arm.com>

--- a/secure_fw/partitions/initial_attestation/CMakeLists.txt
+++ b/secure_fw/partitions/initial_attestation/CMakeLists.txt
@@ -26,6 +26,7 @@ target_sources(tfm_psa_rot_partition_attestation PRIVATE
     tfm_attest.c
     tfm_attest_req_mngr.c
     attest_core.c
+    attest_boot_data.c
     $<$<NOT:$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>>:attest_asymmetric_key.c>
     $<$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>:attest_symmetric_key.c>
     attest_token_encode.c
