CC-312: Set the PSA driver API interface as default option
For CC-312 enabled platforms, set the PSA Cryptoprocess Driver
Interface API as the default interface to be used.

Signed-off-by: Antonio de Angelis <antonio.deangelis@arm.com>
Change-Id: Ib29522f33cd7748b7d584925916ebfe1113f4466

--- a/platform/ext/accelerator/cc312/CMakeLists.txt
+++ b/platform/ext/accelerator/cc312/CMakeLists.txt
@@ -168,11 +168,11 @@ target_sources(${CC312_LIB_PREFIX}cc312
         $<$<OR:$<CONFIG:Debug>,$<CONFIG:relwithdebinfo>>:${CMAKE_CURRENT_SOURCE_DIR}/cc312_log.c>
 )
 
-option(CC312_LEGACY_DRIVER_API_ENABLED "This variable controls whether the legacy driver interface is used for CC-312." ON)
+option(CC312_LEGACY_DRIVER_API_ENABLED "This variable controls whether the legacy driver interface is used for CC-312." OFF)
 if (${CC312_LEGACY_DRIVER_API_ENABLED})
     set(CC312_DRIVER_API_TARGET ${CC312_LIB_PREFIX}cc312_mbedtls_api)
 else()
-    message(FATAL_ERROR "CC312_LEGACY_DRIVER_API_ENABLED must be ON")
+    set(CC312_DRIVER_API_TARGET ${CC312_LIB_PREFIX}cc312_psa_driver_api)
 endif()
 
 # Adding two targets as link-time dependencies of each other seems bad, but
