Build: Correcrt CONFIG_TFM_FP cmake parameter
Fix wrong cmake parameter CONFIG_TFM_SPE_FP as CONFIG_TFM_FP.

Signed-off-by: Feder Liang <feder.liang@arm.com>
Change-Id: Iacd7f426c863deef79be27ab4afd868f8a46d50a

--- a/tools/config_impl.cmake.template
+++ b/tools/config_impl.cmake.template
@@ -33,7 +33,7 @@ if(TFM_PSA_API)
     message(FATAL_ERROR "Invalid partition number input, check configurations.")
 {% endif %}
 
-    if((CONFIG_TFM_SPE_FP GREATER 0) AND CONFIG_TFM_SPM_BACKEND_SFN)
+    if((CONFIG_TFM_FP GREATER 0) AND CONFIG_TFM_SPM_BACKEND_SFN)
         message(FATAL_ERROR "FP is not supported for SFN model.")
     endif()
 endif()
