Build: Set default driver interface for CC-312
Set the default driver interface used by CC-312 to the legacy
driver interface. The PSA driver interface must be enabled
explicitly by setting the following cmake variable
CC312_LEGACY_DRIVER_API_ENABLED to OFF.

Signed-off-by: Antonio de Angelis <antonio.deangelis@arm.com>
Change-Id: I6e90a8d0818007b563c5e8ca2fdac66468be4a59

--- a/platform/ext/accelerator/cc312/CMakeLists.txt
+++ b/platform/ext/accelerator/cc312/CMakeLists.txt
@@ -168,10 +168,16 @@ target_sources(${CC312_LIB_PREFIX}cc312
         $<$<OR:$<CONFIG:Debug>,$<CONFIG:relwithdebinfo>>:${CMAKE_CURRENT_SOURCE_DIR}/cc312_log.c>
 )
 
+# Control the enablement of the legacy CC-312 driver interface or the PSA
+# driver interface. Default value is for the legacy interface
+option(CC312_LEGACY_DRIVER_API_ENABLED
+       "This variable controls whether the legacy driver interface is used for CC-312." ON)
+
 # FixMe: Secure tests enabled and Debug builds with FP support set to hardware
 #        need to fallback to the legacy driver as the new PSA driver overflows
 #        the available flash memory on Musca-S1 and Musca-B1
-if (TEST_S AND (${CMAKE_BUILD_TYPE} STREQUAL "Debug") AND (${CONFIG_TFM_FP} STREQUAL "hard"))
+if ((NOT ${CC312_LEGACY_DRIVER_API_ENABLED}) AND
+    TEST_S AND (${CMAKE_BUILD_TYPE} STREQUAL "Debug") AND (${CONFIG_TFM_FP} STREQUAL "hard"))
     set(CC312_LEGACY_DRIVER_API_ENABLED ON)
     message(WARNING
         "The CC-312 legacy driver interface fallback is forced to ${CC312_LEGACY_DRIVER_API_ENABLED}. \
@@ -184,7 +190,8 @@ endif()
 # FixMe: Secure tests enabled and Debug builds on Musca-B1 need to fallback to
 #        the legacy driver as the new PSA driver overflows the available flash
 #        memory of the SSE-200 subsystem
-if (TEST_S AND (${CMAKE_BUILD_TYPE} STREQUAL "Debug") AND (${TFM_PLATFORM} STREQUAL "arm/musca_b1/sse_200"))
+if ((NOT ${CC312_LEGACY_DRIVER_API_ENABLED}) AND
+    TEST_S AND (${CMAKE_BUILD_TYPE} STREQUAL "Debug") AND (${TFM_PLATFORM} STREQUAL "arm/musca_b1/sse_200"))
     set(CC312_LEGACY_DRIVER_API_ENABLED ON)
     message(WARNING
         "The CC-312 legacy driver interface fallback is forced to ${CC312_LEGACY_DRIVER_API_ENABLED}. \
@@ -194,7 +201,6 @@ if (TEST_S AND (${CMAKE_BUILD_TYPE} STREQUAL "Debug") AND (${TFM_PLATFORM} STREQ
         TFM_PLATFORM: ${TFM_PLATFORM}) for the PSA Cryptoprocessor driver interface due to flash memory constraints.")
 endif()
 
-option(CC312_LEGACY_DRIVER_API_ENABLED "This variable controls whether the legacy driver interface is used for CC-312." OFF)
 if (${CC312_LEGACY_DRIVER_API_ENABLED})
     set(CC312_DRIVER_API_TARGET ${CC312_LIB_PREFIX}cc312_mbedtls_api)
 else()
