--- a/secure_fw/spm/cmsis_func/tfm_spm_db_func.inc.template
+++ b/secure_fw/spm/cmsis_func/tfm_spm_db_func.inc.template
@@ -34,8 +34,11 @@
 /** Declarations of partition init functions */
 /**************************************************************************/
 {% for partition in partitions %}
+    {% if partition.manifest.entry_point %}
 extern void {{partition.manifest.entry_point}}(void);
-
+    {% elif partition.manifest.entry_init %}
+extern void {{partition.manifest.entry_init}}(void);
+    {% endif %}
 {% endfor %}
 /**************************************************************************/
 /** Context stacks for IRQ handling */
@@ -120,7 +123,13 @@ const struct spm_partition_static_data_t static_data_list[] =
     {% endif %}
                               ,
         .partition_priority   = TFM_PRIORITY({{partition.manifest.priority}}),
+    {% if partition.manifest.entry_point %}
         .partition_init       = {{partition.manifest.entry_point}},
+    {% elif partition.manifest.entry_init %}
+        .partition_init       = {{partition.manifest.entry_init}},
+    {% else %}
+        .partition_init       = NULL,
+    {% endif %}
         .dependencies_num     = {{partition.manifest.dependencies | length()}},
     {% if partition.manifest.dependencies %}
         .p_dependencies       = dependencies_{{partition.manifest.name}},
